--- a/_quarto.yml
+++ b/_quarto.yml
@@ -21,10 +21,10 @@ website:
              contents: 
               - href: Cursos/Introducao_R/Cadernos/1-Apresentacao_R_Rstudio.qmd
                 text: "Apresentação do R e Rstudio"
-          # -  section: "Probabilidade e Estatística"
-          #    contents: 
-          #     - href: Cursos/Probabilidade_Estatistica/Probabilidade_Estatistica.qmd
-          #       text: "Conceitos Iniciais"
+          -  section: "Probabilidade e Estatística"
+             contents:
+              - href: Cursos/Probabilidade_Estatistica/Cadernos/Conceitos_Iniciais.qmd
+                text: "Conceitos Iniciais"
           
               
 
