--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,9 @@
-[submodule "Cursos/Introducao_R"]
-	path = Cursos/Introducao_R
-	url = https://github.com/leonardobfn/Introducao_R.git
 [submodule "Cursos/Probabilidade_Estatistica"]
 	path = Cursos/Probabilidade_Estatistica
 	url = https://github.com/leonardobfn/Probabilidade_Estatistica.git
+[submodule "Cusos"]
+	path = Cusos
+	url = https://github.com/leonardobfn/Introducao_R
+[submodule "webpage/Cursos"]
+	path = webpage/Cursos
+	url = https://github.com/leonardobfn/Introducao_R
